@@ -7,6 +7,9 @@ c. Colorbar: print more digits for manual arrays ... but avoid overlapping ???
 	Also allow rotate labels if they too dense
 1. Import/Export via GIF (as 3d data) ??? + 16bit PNG ?!!
 2. Spline5
+
+3. Cloud by boxes?!
+
 4. Add plot layot -- i.e. reserve space for title and so on ... May be the best way to analyze code itself ???
 5. Try to decrease font size if tick labels overlap ???
 
@@ -14,13 +17,10 @@ c. Colorbar: print more digits for manual arrays ... but avoid overlapping ???
 7. "Chaos" in area.png (near axis) ???
 
 8. Options "iI_-aA" for colorbar
+9. Hankel transform
 
 10. New docs:
-- 'hist' and mglGraph::Hist()
-- GridPnts
-- StickPlot()
-- Commands in MGL arguments (like, plot {sum dat 'x'})
-
+- Update documentation (Russian)
 
 
 					MathGL (for v.2.?) ???
@@ -29,8 +29,6 @@ c. Colorbar: print more digits for manual arrays ... but avoid overlapping ???
 3. Interface for Gambas
 4. Interface for Scilab
 7. Converter MGL->C (+ interface for MGL->Fortran by change HMDT->int, HMGL->int, "->');
-8. Update documentation (Russian)
-9. Hankel transform
 10. Derive mglGraphGL from mglGraphPS ??? (see mgl_gl_new.*)
 11. Use Hershey as built-in font ???
 
